5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1671_1100.log
== SUBMITION (2019-04-26 15:01:24) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- EXECUTION TIME:
0.193183
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:22) 
-- CODE:
cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- ERROR:
File "XXXX", line 24
    print("Animal: "Onca-pintada")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
